--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -28,24 +28,38 @@ const TAGS = {
     class: "bg-[#1c7777] text-white",
     icon: React,
   },
+  Flutter: {
+    name: "Flutter",
+    class: "bg-[#1c7777] text-white",
+    icon: React,
+  },
+  Dart: {
+    name: "Dart",
+    class: "bg-[#1c7777] text-white",
+    icon: React,
+  },
 };
 
 const PROJECTS = [
   {
-    title: "Empresa Ficticia - Pagina informativa",
-    description: "Trabajo final de la materia programacion II. Se utilizo Html, Css, JS y React. Tuvo funciones como ChatBot y un sistema de turnos",
+    title: "Simplifica Repartos",
+    description: "Es una herramienta diseñada para gestionar y coordinar la entrega de productos o mercancías de manera eficiente. Con esta aplicación, los encargados de los despachos pueden planificar rutas, asignar entregas, registrar el estado de cada envío y hacer seguimiento en tiempo real",
     link: "#",
     github: "https://github.com/Pietro923/Programacion",
     image: "/projects/proyecto1.webp",
     tags: [TAGS.Html, TAGS.Css, TAGS.Js, TAGS.React],
+    playstore: "https://play.google.com/store/apps/details?id=com.simplifica.solicitudes",
+    appstore: ""
   },
   {
-    title: "Aplicacion del Clima",
+    title: "Plaza 4",
     description: "Pagina creada con el objetivo de usar API del clima y probar su funcionamiento. Se utilizo Html, Css y JS",
     link: "#",
     github: "https://github.com/Pietro923/api-del-clima",
     image: "/projects/proyecto2.webp",
     tags: [TAGS.Html, TAGS.Css, TAGS.Js],
+    playstore: "https://play.google.com/store/apps/details?id=com.simplifica.puntos"
+    appstore: ""
   },
 ];
 ---
