--- a/src/components/Sobre_mi.astro
+++ b/src/components/Sobre_mi.astro
@@ -16,5 +16,5 @@
         Todos los días continúo desarrollando mis habilidades como dev <strong>Full-Stack</strong>, participando en proyectos y haciendo cursos que me permitan <strong>aprender y crecer</strong> como programador. 
     </p>
 </div>
-<img src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHY5M3prNjdmdXV0YmVtMmlxNGNtc3pwNXplOGViMXl0cGFuc3JuNyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fc4CgGnZOktRm/giphy.gif" alt="yo" class="rounded-full size-64">
+<img src="https://media.licdn.com/dms/image/v2/C5603AQFn0bXSStrMUg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1517275908453?e=1755734400&v=beta&t=ZLMXDKhfueCDhT8jX5_kOQDk8kj281ENrGhNeGFKah0" alt="yo" class="rounded-full size-64">
 </section>
