fix project array

--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -58,7 +58,7 @@ const PROJECTS = [
     github: "https://github.com/Pietro923/api-del-clima",
     image: "/projects/proyecto2.webp",
     tags: [TAGS.Html, TAGS.Css, TAGS.Js],
-    playstore: "https://play.google.com/store/apps/details?id=com.simplifica.puntos"
+    playstore: "https://play.google.com/store/apps/details?id=com.simplifica.puntos",
     appstore: ""
   },
 ];
