--- a/src/components/Sobre_mi.astro
+++ b/src/components/Sobre_mi.astro
@@ -1,19 +1,16 @@
 <section class="flex flex-col md:flex-row gap-x-8 justify-center items-center">
 <div class="[&>p]:mb-4 [&>p>strong]:text-blue-300 [&>p>strong]:font-semibold text-pretty">
     <p>
-            Me llamo Juan Pietro Bonacossa, tengo 20 años y soy de Tucumán, Argentina. Estudio la <strong>Tecnicatura Universitaria en Programación </strong> en la UTN FRT  (Universidad Tecnológica Nacional, Facultad Regional Tucumán). 
+        Soy una persona proactiva, innovadora, apasionado por la tecnología y la innovación con mucha experiencia trabajando independientemente y en equipo, con habilidad para el aprendizaje rápido, y trabajando bajo presión.
     </p>
-    
     <p>
-        Siempre estoy buscando oportunidades para <strong>crecer</strong> como profesional y prepararme para el mundo laboral.
+        Ingeniero de Sistemas de Información por la Universidad de Ciencias Aplicadas (UPC), con amplia experiencia en ingenieria de software cumpliendo roles como Desarrollador Mobile.
     </p>
-    
     <p>
-        <strong>Estudie Ingles en Aticana y obtuve un nivel B2</strong>. Me apasiona el mundo del desarrollo de videojuegos, y en mi tiempo libre, aprendo tecnologías como Unity y Godot.
-    </p>
-
-    <p class="text-pretty">
-        Todos los días continúo desarrollando mis habilidades como dev <strong>Full-Stack</strong>, participando en proyectos y haciendo cursos que me permitan <strong>aprender y crecer</strong> como programador. 
+        Mi experiencia en el desarrollo de software empieza desde el 2014, empezando con tecnologías de Microsoft como 
+        C# .NET Core, SQL sever, posterionmente lenguajes de programación como PHP, Python, MySql y por el lado del 
+        fontend boostrap, angular y finalmente  java, kotlin para android y dart con FLutter, siempre mejorar con 
+        metodologías ágiles y buenas practicas en el desarrollo de software.
     </p>
 </div>
 <img src="https://media.licdn.com/dms/image/v2/C5603AQFn0bXSStrMUg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1517275908453?e=1755734400&v=beta&t=ZLMXDKhfueCDhT8jX5_kOQDk8kj281ENrGhNeGFKah0" alt="yo" class="rounded-full size-64">
