--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,13 +12,13 @@ import Github from "../icons/Social/Github.astro"
             </a>. 
         </span> 
 
-        <ul class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"> 
+        <!-- <ul class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"> 
             <li> 
                 <a href="#sobremi" class="hover:underline me-4 md:me-6">Sobre mí</a> 
             </li> 
             <li> 
                 <a id="contacto" href="mailto:freddzg@gmail.com" class="hover:underline">Contacto</a> 
             </li> 
-        </ul> 
+        </ul>  -->
     </div> 
 </footer>
