--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ description="Mi objetivo es aprender y mejorar constantemente, participando en p
 			</Social_icons>
 			<Social_icons href="https://stackoverflow.com/users/4050770/roy-parejo">
 				<Stackoverflow class="size-4 md:size-6"/>
-				stack overflow
+				Stack overflow
 			</Social_icons>
 		</nav>
 		</Section>
