--- a/src/components/Tecnologias.astro
+++ b/src/components/Tecnologias.astro
@@ -13,12 +13,18 @@ import React from '../icons/Tecnologias/Frameworks_Librerias/React.astro';
 import Tailwind from '../icons/Tecnologias/Frameworks_Librerias/Tailwind.astro';
 import Mongo from '../icons/Tecnologias/Bases_de_datos/Mongo.astro';
 import Mysql from '../icons/Tecnologias/Bases_de_datos/Mysql.astro';
+import Sqlite from '../icons/Tecnologias/Bases_de_datos/Sqlite.astro';
 import Figma from '../icons/Tecnologias/Herramientas_Adicionales/Figma.astro';
 import Git from '../icons/Tecnologias/Herramientas_Adicionales/Git.astro';
 import Netlify from '../icons/Tecnologias/Herramientas_Adicionales/Netlify.astro';
 import Vercel from '../icons/Tecnologias/Herramientas_Adicionales/Vercel.astro';
 import Notion from '../icons/Tecnologias/Herramientas_Adicionales/Notion.astro';
 import Tecno_icon from '../icons/Titulos/Tecno_icon.astro';
+import Dart from "../icons/Tecnologias/Lenguajes/Dart.astro";
+import Kotlin from "../icons/Tecnologias/Lenguajes/Kotlin.astro";
+import Sql from "../icons/Tecnologias/Bases_de_datos/Sql.astro";
+import Android from "../icons/Tecnologias/Frameworks_Librerias/Android.astro";
+import Flutter from "../icons/Tecnologias/Frameworks_Librerias/Flutter.astro";
 ---
 
 <div class="flex flex-col items-center">
@@ -30,35 +36,31 @@ import Tecno_icon from '../icons/Titulos/Tecno_icon.astro';
     <div>
       <h2 class="text-2xl opacity-80 mb-6 text-center">Lenguajes</h2>
       <nav class="flex flex-wrap justify-center gap-4">
-        <Tecnos_icons title="HTML"><Html class="w-12 h-12" /></Tecnos_icons>
-        <Tecnos_icons title="CSS"><Css class="w-12 h-12" /></Tecnos_icons>
         <Tecnos_icons title="JavaScript"><Js class="w-12 h-12" /></Tecnos_icons>
         <Tecnos_icons title="PHP"><Php class="w-12 h-12" /></Tecnos_icons>
         <Tecnos_icons title="C#"><Csharp class="w-12 h-12" /></Tecnos_icons>
+        <Tecnos_icons title="Dart"><Dart class="w-12 h-12" /></Tecnos_icons>
+        <Tecnos_icons title="Kotlin"><Kotlin class="w-12 h-12" /></Tecnos_icons>
       </nav>
       <h2 class="text-2xl opacity-80 mt-8 mb-6 text-center">Frameworks y Librerías</h2>
       <nav class="flex flex-wrap justify-center gap-4">
-        <Tecnos_icons title="Astro"><Ast class="w-12 h-12" /></Tecnos_icons>
-        <Tecnos_icons title="Bootstrap"><Bootstrap class="w-12 h-12" /></Tecnos_icons>
-        <Tecnos_icons title="Express"><Express class="w-12 h-12" /></Tecnos_icons>
-        <Tecnos_icons title="Node.js"><Node class="w-12 h-12" /></Tecnos_icons>
+        <Tecnos_icons title="Android"><Android class="w-12 h-12" /></Tecnos_icons>
+        <Tecnos_icons title="Flutter"><Flutter class="w-12 h-12" /></Tecnos_icons>
         <Tecnos_icons title="React"><React class="w-12 h-12" /></Tecnos_icons>
-        <Tecnos_icons title="Tailwind CSS"><Tailwind class="w-12 h-12" /></Tecnos_icons>
       </nav>
     </div>
     
     <div>
       <h2 class="text-2xl opacity-80 mb-6 text-center">Bases de Datos</h2>
       <nav class="flex flex-wrap justify-center gap-4">
-        <Tecnos_icons title="MongoDB"><Mongo class="w-12 h-12" /></Tecnos_icons>
+        <Tecnos_icons title="Sql Server"><Sql class="w-12 h-12" /></Tecnos_icons>
         <Tecnos_icons title="MySQL"><Mysql class="w-12 h-12" /></Tecnos_icons>
+        <Tecnos_icons title="Sqlite"><Sqlite class="w-12 h-12" /></Tecnos_icons>
       </nav>
       <h2 class="text-2xl opacity-80 mt-8 mb-6 text-center">Herramientas Adicionales</h2>
       <nav class="flex flex-wrap justify-center gap-4">
         <Tecnos_icons title="Figma"><Figma class="w-12 h-12" /></Tecnos_icons>
         <Tecnos_icons title="Git"><Git class="w-12 h-12" /></Tecnos_icons>
-        <Tecnos_icons title="Netlify"><Netlify class="w-12 h-12" /></Tecnos_icons>
-        <Tecnos_icons title="Vercel"><Vercel class="w-12 h-12" /></Tecnos_icons>
         <Tecnos_icons title="Notion"><Notion class="w-12 h-12" /></Tecnos_icons>
       </nav>
     </div>
