--- a/src/components/Tecnologias.astro
+++ b/src/components/Tecnologias.astro
@@ -10,6 +10,7 @@ import Bootstrap from '../icons/Tecnologias/Frameworks_Librerias/Bootstrap.astro
 import Express from '../icons/Tecnologias/Frameworks_Librerias/Express.astro';
 import Node from '../icons/Tecnologias/Frameworks_Librerias/Node.astro';
 import React from '../icons/Tecnologias/Frameworks_Librerias/React.astro';
+import Firebase from '../icons/Tecnologias/Frameworks_Librerias/Firebase.astro';
 import Tailwind from '../icons/Tecnologias/Frameworks_Librerias/Tailwind.astro';
 import Mongo from '../icons/Tecnologias/Bases_de_datos/Mongo.astro';
 import Mysql from '../icons/Tecnologias/Bases_de_datos/Mysql.astro';
@@ -47,6 +48,7 @@ import Flutter from "../icons/Tecnologias/Frameworks_Librerias/Flutter.astro";
         <Tecnos_icons title="Android"><Android class="w-12 h-12" /></Tecnos_icons>
         <Tecnos_icons title="Flutter"><Flutter class="w-12 h-12" /></Tecnos_icons>
         <Tecnos_icons title="React"><React class="w-12 h-12" /></Tecnos_icons>
+        <Tecnos_icons title="Firebase"><Firebase class="w-12 h-12" /></Tecnos_icons>
       </nav>
     </div>
     
