--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -1,6 +1,7 @@
 ---
 import Html from "../icons/Tecnologias/Lenguajes/Html.astro";
 import Css from "../icons/Tecnologias/Lenguajes/Css.astro";
+import Dart from "../icons/Tecnologias/Lenguajes/Dart.astro";
 import Js from "../icons/Tecnologias/Lenguajes/Js.astro";
 import React from "../icons/Tecnologias/Frameworks_Librerias/React.astro";
 import Firebase from "../icons/Tecnologias/Frameworks_Librerias/Firebase.astro";
@@ -40,17 +41,17 @@ const TAGS = {
   },
   Dart: {
     name: "Dart",
-    class: "bg-[#1c7777] text-white",
-    icon: React,
+    class: "bg-[#07436b] text-white",
+    icon: Dart,
   },
   Firebase: {
     name: "Firebase",
-    class: "bg-[#1c7777] text-white",
+    class: "bg-[#a39535] text-white",
     icon: Firebase,
   },
   Sqlite: {
     name: "Sqlite",
-    class: "bg-[#1c7777] text-white",
+    class: "bg-[#000] text-white",
     icon: Sqlite,
   },
 };
@@ -61,7 +62,7 @@ const PROJECTS = [
     description: "Es una herramienta diseñada para gestionar y coordinar la entrega de productos o mercancías de manera eficiente. Con esta aplicación, los encargados de los despachos pueden planificar rutas, asignar entregas, registrar el estado de cada envío y hacer seguimiento en tiempo real",
     link: "",
     image: "/projects/proyecto1.webp",
-    tags: [TAGS.Html, TAGS.Css, TAGS.Js, TAGS.React],
+    tags: [TAGS.Dart, TAGS.Flutter, TAGS.Sqlite],
     playstore: "https://play.google.com/store/apps/details?id=com.simplifica.solicitudes",
     appstore: "https://play.google.com/store/apps/details?id=com.simplifica.puntos"
   },
@@ -71,7 +72,7 @@ const PROJECTS = [
     link: "",
     github: "",
     image: "/projects/proyecto2.webp",
-    tags: [TAGS.Html, TAGS.Css, TAGS.Js],
+    tags: [TAGS.Firebase, TAGS.Css, TAGS.Js],
     playstore: "https://play.google.com/store/apps/details?id=com.simplifica.puntos",
   },
   {
