--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -5,7 +5,7 @@ import Dart from "../icons/Tecnologias/Lenguajes/Dart.astro";
 import Js from "../icons/Tecnologias/Lenguajes/Js.astro";
 import React from "../icons/Tecnologias/Frameworks_Librerias/React.astro";
 import Firebase from "../icons/Tecnologias/Frameworks_Librerias/Firebase.astro";
-import Android from "../icons/Tecnologias/Frameworks_Librerias/Android.astro";
+import Flutter from "../icons/Tecnologias/Frameworks_Librerias/Flutter.astro";
 import Sqlite from "../icons/Tecnologias/Bases_de_datos/Sqlite.astro";
 import Social_icons from "./Social_icons.astro";
 import Github from "../icons/Social/Github.astro";
@@ -37,7 +37,7 @@ const TAGS = {
   Flutter: {
     name: "Flutter",
     class: "bg-[#1c7777] text-white",
-    icon: React,
+    icon: Flutter,
   },
   Dart: {
     name: "Dart",
@@ -46,7 +46,7 @@ const TAGS = {
   },
   Firebase: {
     name: "Firebase",
-    class: "bg-[#a39535] text-white",
+    class: "bg-[#963419] text-white",
     icon: Firebase,
   },
   Sqlite: {
