--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -36,7 +36,7 @@ const TAGS = {
   },
   Flutter: {
     name: "Flutter",
-    class: "bg-[#1c7777] text-white",
+    class: "bg-[#1fbcfd] text-white",
     icon: Flutter,
   },
   Dart: {
@@ -61,7 +61,7 @@ const PROJECTS = [
     title: "Simplifica Repartos",
     description: "Es una herramienta diseñada para gestionar y coordinar la entrega de productos o mercancías de manera eficiente. Con esta aplicación, los encargados de los despachos pueden planificar rutas, asignar entregas, registrar el estado de cada envío y hacer seguimiento en tiempo real",
     link: "",
-    image: "/projects/proyecto1.webp",
+    image: "/projects/app-repartos.webp",
     tags: [TAGS.Dart, TAGS.Flutter, TAGS.Sqlite],
     playstore: "https://play.google.com/store/apps/details?id=com.simplifica.solicitudes",
     appstore: "https://play.google.com/store/apps/details?id=com.simplifica.puntos"
