--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -71,9 +71,10 @@ const PROJECTS = [
     description: "Pagina creada con el objetivo de usar API del clima y probar su funcionamiento. Se utilizo Html, Css y JS",
     link: "",
     github: "",
-    image: "/projects/proyecto2.webp",
-    tags: [TAGS.Firebase, TAGS.Css, TAGS.Js],
+    image: "/projects/ap-puntos.webp",
+    tags: [TAGS.Dart, TAGS.Flutter],
     playstore: "https://play.google.com/store/apps/details?id=com.simplifica.puntos",
+    appstore: "",
   },
   {
     title: "Plaza 4",
