--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -36,7 +36,7 @@ const TAGS = {
   },
   Flutter: {
     name: "Flutter",
-    class: "bg-[#1fbcfd] text-white",
+    class: "bg-[#095a9d] text-white",
     icon: Flutter,
   },
   Dart: {
@@ -71,19 +71,20 @@ const PROJECTS = [
     description: "Pagina creada con el objetivo de usar API del clima y probar su funcionamiento. Se utilizo Html, Css y JS",
     link: "",
     github: "",
-    image: "/projects/ap-puntos.webp",
+    image: "/projects/app-puntos.webp",
     tags: [TAGS.Dart, TAGS.Flutter],
     playstore: "https://play.google.com/store/apps/details?id=com.simplifica.puntos",
     appstore: "",
   },
   {
-    title: "Plaza 4",
-    description: "Pagina creada con el objetivo de usar API del clima y probar su funcionamiento. Se utilizo Html, Css y JS",
+    title: "Registro PDV",
+    description: "Registro de asistencia usando la cámara y ubicación GPS.",
     link: "",
     github: "",
     image: "/projects/proyecto2.webp",
-    tags: [TAGS.Html, TAGS.Css, TAGS.Js],
-    appstore: "https://play.google.com/store/apps/details?id=com.simplifica.puntos",
+    tags: [TAGS.Dart, TAGS.Flutter],
+    playstore: "https://play.google.com/store/apps/details?id=com.createksystem.assist_app",
+    appstore: "",
   },
 ];
 ---
