--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -76,7 +76,7 @@ const PROJECTS = [
     image: "/projects/app-repartos.webp",
     tags: [TAGS.Dart, TAGS.Flutter, TAGS.Sqlite],
     playstore: "https://play.google.com/store/apps/details?id=com.simplifica.solicitudes",
-    appstore: "https://play.google.com/store/apps/details?id=com.simplifica.puntos"
+    appstore: ""
   },
   {
     title: "Plaza 4",
@@ -86,35 +86,35 @@ const PROJECTS = [
     image: "/projects/app-puntos.webp",
     tags: [TAGS.Dart, TAGS.Flutter],
     playstore: "https://play.google.com/store/apps/details?id=com.simplifica.puntos",
-    appstore: "",
+    appstore: "https://apps.apple.com/us/app/plaza-4/id6740218700",
   },
   {
     title: "Registro PDV",
-    description: "Registro de asistencia usando la cámara y ubicación GPS.",
+    description: "Herramiento para el registro de asistencia usando del personal de campo, la aplicación utiliza la cámara y ubicación GPS para un mejor control.",
     link: "",
     github: "",
     image: "/projects/app-ubicacion.webp",
     tags: [TAGS.Dart, TAGS.Flutter],
     playstore: "https://play.google.com/store/apps/details?id=com.createksystem.assist_app",
-    appstore: "",
+    appstore: "https://appstoreconnect.apple.com/apps/6444106260/distribution/ios/version/deliverable",
   },
   {
     title: "Himnario Adventista SMI",
-    description: "Registro de asistencia usando la cámara y ubicación GPS.",
+    description: "Catalogo de himnos, pentagramas y audios con reproductor. La app permite al usuario descargar los recursos y usarlos sin conexión",
     link: "",
     github: "",
     image: "/projects/app-himnario.webp",
-    tags: [TAGS.Dart, TAGS.Flutter],
+    tags: [TAGS.Dart, TAGS.Flutter, TAGS.Sqlite],
     playstore: "https://play.google.com/store/apps/details?id=com.createksystem.himnarioamr",
-    appstore: "",
+    appstore: "https://apps.apple.com/us/app/himnario-adventista-smi-up/id1551068161",
   },
   {
     title: "GZampu zampoña",
-    description: "Registro de asistencia usando la cámara y ubicación GPS.",
+    description: "Zampoña es un instrumento musical propio de América latina, contiene sonidos dulces y profundos que relajan la mente.",
     link: "",
     github: "",
     image: "/projects/app-gzampu.webp",
-    tags: [TAGS.Android, TAGS.Sqlite],
+    tags: [TAGS.Android, TAGS.Java, TAGS.Sqlite],
     playstore: "https://play.google.com/store/apps/details?id=com.rparejo.zamponia",
     appstore: "",
   },
