mejora tags y presentacion

--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -38,7 +38,7 @@ const TAGS = {
   },
   Flutter: {
     name: "Flutter",
-    class: "bg-[#095a9d] text-white",
+    class: "bg-[#fff] text-black",
     icon: Flutter,
   },
   Dart: {
@@ -63,7 +63,7 @@ const TAGS = {
   },
   Java: {
     name: "Java",
-    class: "bg-[#fff] text-black",
+    class: "bg-[#000] text-white",
     icon: Java,
   },
 };
