--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,13 @@ description="Mi objetivo es aprender y mejorar constantemente, participando en p
 			</div><a/> -->
 		</h1>
 		<h2 class="text-xl lg:text-2xl opacity-80 text-pretty max-w-{700px}">
-			<span class="text-blue-300">Flutter Developer.</span> <br>Soy ingeniero de Sistemas con más de 9 años de experiencia en desarrollo de Software. He desarrollado desde aplicaciones de escritorio, web y actualmente enfocado en aplicaciones móviles multiplataforma bajo metodología tradicional y ágiles como SCRUM.
+			<span class="text-blue-300">Flutter Developer.</span><br/>
+			En los últimos años me enfocado en el desarrollo móvil, pasando por android con java y kotlin 
+			y posteriormente el SDK Flutter con Dart para agilizar el desarollo multiplataforma.
+			En el desarrollo con Flutter utilizo <strong>arquitectura limpia</strong> y manejadores de estado 
+			como <strong>Provider</strong>, <strong>BLoC</strong>. Tengo experiencia con aplicaciones de 
+			geolocalización, mapas, tiempo real, offline, webview y siempre trato de usar buenas practicas 
+			como princiopios <strong>SOLID</strong>.
 		</h2>
 		<nav class="flex gap-x-5 mt-6 flex-wrap">
 			<Social_icons href="https://www.linkedin.com/in/rparejo/">
