detalle app puntos

--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -80,7 +80,7 @@ const PROJECTS = [
   },
   {
     title: "Plaza 4",
-    description: "Pagina creada con el objetivo de usar API del clima y probar su funcionamiento. Se utilizo Html, Css y JS",
+    description: "Herramienta para el manejo de puntos de los clientes, la aplicacion proporciona una tarjeta virtual y el historial de movimientos de los puntos del usuario",
     link: "",
     github: "",
     image: "/projects/app-puntos.webp",
