--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -80,7 +80,7 @@ const PROJECTS = [
   },
   {
     title: "Plaza 4",
-    description: "Herramienta para el manejo de puntos de los clientes, la aplicacion proporciona una tarjeta virtual y el historial de movimientos de los puntos del usuario",
+    description: "Herramienta para el manejo de puntos de los clientes, la aplicación proporciona una tarjeta virtual y el historial de movimientos de los puntos del usuario.",
     link: "",
     github: "",
     image: "/projects/app-puntos.webp",
@@ -100,7 +100,7 @@ const PROJECTS = [
   },
   {
     title: "Himnario Adventista SMI",
-    description: "Catalogo de himnos, pentagramas y audios con reproductor. La app permite al usuario descargar los recursos y usarlos sin conexión",
+    description: "Catalogo de himnos, pentagramas y audios con reproductor. La app permite al usuario descargar los recursos y usarlos sin conexión.",
     link: "",
     github: "",
     image: "/projects/app-himnario.webp",
